--- a/bower.json
+++ b/bower.json
@@ -4,28 +4,16 @@
   "homepage": "http://meanjs.org/",
   "license": "MIT",
   "dependencies": {
-    "angular": "~1.5.0",
-    "angular-animate": "~1.5.0",
-    "angular-bootstrap": "~1.2.1",
-    "angular-messages": "~1.5.0",
-    "angular-mocks": "~1.5.0",
-    "angular-resource": "~1.5.0",
-    "angular-ui-notification": "~0.2.0",
-    "angular-ui-router": "~0.2.18",
-    "bootstrap": "~3.3.6",
+	"angular": "~1.6.0",
+    "angular-animate": "~1.6.0",
+    "angular-aria": "~1.6.0",
+    "angular-material": "^1.1.4",
+    "angular-messages": "^1.6.6",
+    "angular-resource": "~1.6.0",
+    "angular-sanitize": "~1.6.0",
+    "angular-ui-router": "~0.3.1",
+    "angular-validation-match": "^1.9.0",
     "ng-file-upload": "~12.1.0",
     "owasp-password-strength-test": "~1.3.0"
-  },
-  "overrides": {
-    "bootstrap": {
-      "main": [
-        "dist/css/bootstrap.css",
-        "dist/css/bootstrap-theme.css",
-        "less/bootstrap.less"
-      ]
-    },
-    "jquery": {
-      "main": []
-    }
   }
 }
