--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-sanitize": "~1.6.0",
     "angular-ui-router": "~0.3.1",
     "angular-validation-match": "^1.9.0",
+	"angular-ui-notification": "~0.2.0",
     "ng-file-upload": "~12.1.0",
     "owasp-password-strength-test": "~1.3.0"
   }
